[package]
name = "space-object-tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
epi = "0.17.0"
macroquad = "0.4.13"
serde_json = "1.0.133"
sgp4 = "2.2.0"  # Ensure you use the latest version
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"

[[bin]]
name = "macroquad"
path = "src/macroquad.rs"

[[bin]]
name = "egui"
path = "src/egui.rs"
